# gpt_docgen

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: format_lint.yml  publish_docs.yml  test.yml
api/cli/: index.html
api/explain_file/: index.html
api/initialize/: index.html
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree
docs/.doctrees/markdown/src/: cli.doctree  constants.doctree  describe_file.doctree  embedding.doctree  prompts.doctree
docs/_modules/: index.html  src.html
docs/_modules/src/: cli.html  describe_file.html  embedding.html
docs/_sources/: index.rst.txt  src.rst.txt
docs/_sources/markdown/src/: cli.md.txt  embedding.md.txt  prompts.md.txt
docs/_static/: documentation_options.js
docs/api/: cli.md  explain_file.md  initialize.md
docs/markdown/src/: cli.html  cli.md  constants.html  constants.md  describe_file.html  describe_file.md  embedding.html  embedding.md  prompts.html
docs_build/: conf.py
docs_build/markdown/src/: constants.md  describe_file.md
src/: __init__.py  agents.py  available_chats.py  available_embeddings.py  cli.py  constants.py  describe_file.py  embedding.py  explain_file.py  initialize.py  prompts.py
tests/: __init__.py
